# slay-the-spire-mcp

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start-mock.ps1  stop-mock.ps1
.claude/: LOCKS.md  settings.local.json
.claude/agents/: architect.md  implementer.md  refactor.md  verifier.md
.claude/plans/: decisions-and-research.md  floor-history-spec.md  mvp-architecture.md  phase-6-polish.md
.claude/skills/interview/: SKILL.md
.claude/skills/keep-alive/: SKILL.md  prevent-sleep.ps1
bridge/: README.md  pyproject.toml
bridge/src/spire_bridge/: __init__.py  __main__.py  protocol.py  relay.py
bridge/tests/: test_relay.py
docs/: architecture-decisions.md  configuration.md  installation.md  troubleshooting.md
mod/: .gitignore  README.md  pom.xml
mod/src/main/java/spirebridge/: ChoiceScreenUtils.java  CommandExecutor.java  DataReader.java  DataWriter.java  EndOfTurnAction.java  GameStateConverter.java  GameStateListener.java  InvalidCommandException.java  OnStateChangeSubscriber.java  (+2 more)
mod/src/main/resources/: ModTheSpire.json
server/: .env  Dockerfile  README.md  pyproject.toml
server/src/slay_the_spire_mcp/: __init__.py  __main__.py  commentary.py  config.py  context.py  detection.py  mock.py  models.py  overlay.py  prompts.py  resources.py  server.py  startup.py  state.py  stdin_io.py  terminal.py  tools.py
server/tests/: __init__.py  test_commentary.py  test_config.py  test_context.py  test_coverage_improvements.py  test_detection.py  test_error_handling.py  test_mcp_registration.py  test_mcp_state_wiring.py  test_mock_mode.py  test_overlay.py  test_prompts.py  test_resources.py  test_startup.py  test_state.py  test_stdin_listener.py  test_tcp_listener.py  test_terminal.py  test_tools.py
shared/card_database/: cards.json  colorless.json  defect.json  ironclad.json  silent.json  special.json  status_curse.json  watcher.json
shared/schemas/: game_state.json  overlay.json
tests/: __init__.py  conftest.py  test_detection.py  test_models.py  test_state.py
tests/fixtures/game_states/: card_reward.json  combat.json  event.json  map.json  rest.json  shop.json
tests/integration/: __init__.py  test_e2e_bridge.py
(+32 files in other folders)
